--- a/package.json
+++ b/package.json
@@ -10,9 +10,18 @@
     "@types/node": "^16.18.39",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
+    "apexcharts": "^3.29.0",
+    "gh-pages": "^3.2.3",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.3.9",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
+    "react-query": "^3.27.0",
+    "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
+    "recoil": "^0.7.7",
+    "styled-components": "^6.0.5",
+    "styled-reset": "^4.3.4",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
@@ -39,5 +48,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-helmet": "^6.1.6"
   }
 }
