--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "gh-pages": "^3.2.3",
     "react": "^18.2.0",
     "react-apexcharts": "^1.3.9",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
+    "react-hook-form": "^7.45.2",
     "react-query": "^3.27.0",
     "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
@@ -50,6 +52,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-beautiful-dnd": "^13.1.4",
     "@types/react-helmet": "^6.1.6"
   }
 }
